# foulabean

./: .gitignore  CLAUDE.md  CMakeLists.txt  MVP.md  Readme.md  qml-cpp-best-practices-qt6.10.md  vcpkg.json
main/: CMakeLists.txt
main/qml/: Main.qml
main/src/: AdcModel.cpp  AdcModel.h  BridgeTypes.h  GpioModel.cpp  GpioModel.h  RenodeEventDispatcher.cpp  RenodeEventDispatcher.h  RenodeWorker.cpp  RenodeWorker.h  SimulationController.cpp  SimulationController.h  main.cpp
renodeAPI/: CMakeLists.txt
renodeAPI/include/: defs.h  renodeInterface.h  renodeMachine.h  zmqInterface.hpp
renodeAPI/renodeTestScripts/: 01_gpio_blinky.resc  01_python_assertions.resc  03_adc_gpadc.resc  08_i2c_echo.resc  10_multi_machine_can_exchange.resc  ra8m1_gpio_blink_test.resc  ra8m1_uart_test.resc  test-machine.resc
renodeAPI/renodeTestScripts/generatedTests/: README.md
renodeAPI/renodeTestScripts/generatedTests/advanced/: 00_ci_runner_template.resc  01_python_assertions.resc  02_ethernet_echo_two_machines.resc
renodeAPI/renodeTestScripts/generatedTests/can/: 01_mcan_loopback_socket.resc  02_mcan_driver_api.resc  03_mcan_timing.resc  04_mcan_shell.resc  05_isotp_loopback.resc  06_isotp_conformance.resc  07_isotp_implementation.resc  08_can_counter_loopback.resc  09_can_sockets_loopback.resc  10_multi_machine_can_exchange.resc  11_multi_machine_can_counter.resc  12_multi_machine_isotp.resc
renodeAPI/renodeTestScripts/generatedTests/renesas_da14592/: 01_uart_hello_world.resc  02_gpio.resc  03_adc_gpadc.resc  04_watchdog.resc  05_timer_gpt.resc  06_dma_mem_to_mem.resc  07_spi_adxl372.resc  08_i2c_echo.resc  09_i2c_dma.resc  10_freertos_retarget.resc
renodeAPI/renodeTestScripts/generatedTests/renesas_ra8m1/: 01_sci_uart.resc  02_agt_led_blink.resc  03_sci_spi.resc  04_sci_i2c.resc
renodeAPI/renodeTestScripts/generatedTests/stm32h753zi/: 01_gpio_blinky.resc  02_gpio_button.resc  03_ethernet_echo_server.resc  04_ethernet_echo_client.resc  05_ethernet_ptp.resc  06_crypto_aesgcm.resc  07_crypto_aesgcm_it.resc  08_crypto_aes_dma.resc  09_qspi_readwrite.resc  10_qspi_memorymapped.resc  11_qspi_xip.resc  12_flash_erase_program.resc
renodeAPI/src/: renodeInterface.cpp  renodeInternal.h  renodeMachine.cpp  zmqInterface.cpp
